@@ -3,6 +3,7 @@
 - Improved: [#21424] Extra viewports can now rotate independently from the main viewport.
 - Change: [#21529] Classify “Southern Sands”, “Tiny Towers”, “Nevermore Park”, “Pacifica” as expert scenarios.
 - Fix: [#910] Extra viewport does not preserve the location when rotating.
+- Fix: [#21434] Number of guests overflows in objective text.
 - Fix: [#21543] Crash with creating a TrackIterator with invalid arguments.
 
 0.4.9 (2024-03-02)
